feat(gizmos): manage kiosk destinations
